Wrote large amount of the HTML file, with Uzairs help

--- a/index.html
+++ b/index.html
@@ -8,18 +8,94 @@
     <meta charset="utf-8">
     <meta name="author" content="Ian R">
   </head>
-  <header>
-    <h3>Title</h3>
-    <nav>
-      <ul>
-        <li><a>Mission Statement</a></li> <!--Remember to add links-->
-        <li><a>Products</a></li>
-        <li><a>Employees</a></li> 
-      </ul>
-    </nav>
-  </header>
   <body>
-
-    
+    <header>
+      <h3>The Conglomerate</h3>
+      <nav>
+        <ul>
+          <li><a>Mission Statement</a></li> <!--Remember to add links-->
+          <li><a>Products</a></li>
+          <li><a>Employees</a></li> 
+        </ul>
+      </nav>
+    </header>
+    <section id='titleSplash'>
+      <h1>The Conglomerate of Associated Government Military Contractors</h1>
+      <img id='splashImg' src='media/splash.jpg' alt='' >
+    </section>
+    <section id='missionStatement'>
+      <h2>Our Mission: To line our pockets by continuing the eternal spin of the 
+        Military-Industrial complex wheel, through copious lobbying
+        and warmongering in the press. The exploitation of third world workers
+        is just a perk of the job for us bloodsucking leeches!
+      </h2>
+    </section>
+    <section id='products'>
+      <div class='productBox'>
+        <img class='productImg' src='media/gimble.jpg' alt='A cool gimble in a college apartment'>
+        <h4>The Gimble</h4>
+        <p>A glorified cake spinner, sure to please high society functions, 
+          can even survive a Yemeni wedding! Features a laser pointer to tell your
+          brain dead servants where to go, or blind precocious children you told your
+          invitees not to bring.
+        </p>
+      </div>
+      <div class='productBox'>
+        <img class='productImg' src='media/toaster.jpg' alt='An evil robotic toaster'>
+        <h4>Smart Home Tech</h4>
+        <p>Nowadays nearly everything spies on you, so we here at the Conglomerate thought:
+          "Hell, why not our toasters too?". Our BioAdvanced© KillBot© Toaster is garunteed
+          to report your activities to the government, as well as any interested and paying 
+          dystopic corporation. And as a special bonus, it can transform into a deadly, remote
+          operated death machine, trained in CIA Torture and Coup tactics. It's 'More than meets the Eye!'
+          Also toasts a mean rye.    
+        </p>
+      </div>
+      <div class='productBox'>
+        <img class='productImg' src='media/martiniHenri.jpg' alt='A based breech loader'>
+        <h4>The Martini Henri</h4>
+        <p>One of our first products! Our innovations ensured the Sun never Set upon 
+          the Union Jack. Some of these bad boys are still found in Mujadeen weapons caches
+          from the failed Invasions of Afghanistan, proving our products longevity!
+        </p>
+      </div>
+      <div class='productBox'>
+        <img class='productImg' src='media/railroad.png' alt='A map of the Pan-African Railline'>
+        <p>Our team is commited to promoting infrastructure in developing regions,
+          for example our ambitious East African plan, which will be constructed
+        </p>
+      </div>
+    </section>
+    <section id='employees'>
+      <div class='employeeBox'>
+        <img class='employeeImg' src='media/ian.jpg' alt='A dweeb in a cape and beret drinking tea'>
+        <h4>Ian 'Bazooka' Ring</h4>
+        <p>'Loser'- John Carlyle Ring</p>
+      </div>
+      <div class='employeeBox'>
+        <img class='employeeImg' src='media/uzibaby.jpg' alt='Mugshot of a dangerous Dutch politcal radical'>
+        <h4>Uzair 'Uzi-baby' Ahmed</h4>
+        <p>'Loser'- Muizz Ahmed.</p>
+      </div>
+      <div class='employeeBox'>
+        <img class='employeeImg' src='media/crispy.jpg' alt='A giga Chad'>
+        <h4>Christopher 'Crispy' Hanely</h4>
+        <p>Bonafide Summoner on the Rift, can articulatly and amusingly harangue 
+          on the lack of design merit in League of Legends. Will call Shaco support players
+          virgins, and will say the Gamer Word at the slightest provocation. 
+        </p>
+      </div>
+      <div class='employeeBox'>
+        <img class='employeeImg' src='media/antGod.png' alt='Spindly young man in a Safewine wine aisle, holding a jug of white, hands making a rad symbol, captioned: Spring Break'>
+        <h4>Anthony 'Ant-God' St. John</h4>
+        <p>Alternatively known as 'The Itallian Stallion', the 'Spicy Meatball'
+          Specializes in Deagle Headshots, being an agent of chaos, and snickering.
+        </p>
+      </div>
+    </section>
+    <footer>
+      <h3>Copyright 2021</h3>
+      <h3>Paid for in Part by AIPAC</h3>
+    </footer>
   </body>
 </html>
