--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang='en'>
   <head>
-    <title>blah</title>
+    <title>CAGMC</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
