Header and Title Splash, fixed some CSS issues

--- a/index.html
+++ b/index.html
@@ -10,27 +10,29 @@
   </head>
   <body>
     <header>
-      <h3>The Conglomerate</h3>
+      <div class='headerDiv'>
+        <h3>The Conglomerate</h3>
+      </div>
       <nav>
         <ul>
-          <li><a>Mission Statement</a></li> <!--Remember to add links-->
-          <li><a>Products</a></li>
-          <li><a>Employees</a></li> 
+          <li><a href='#missionStatement'>Mission</a></li> <!--Remember to add links-->
+          <li><a href='#products'>Products</a></li>
+          <li><a href='#employees'>Employees</a></li> 
         </ul>
       </nav>
     </header>
     <section id='titleSplash'>
       <h1>The Conglomerate of Associated Government Military Contractors</h1>
-      <img id='splashImg' src='media/splash.jpg' alt='' >
     </section>
-    <section id='missionStatement'>
-      <h2>Our Mission: To line our pockets by continuing the eternal spin of the 
+    <section id='mission'>
+      <h2 id='missionStatement'>Our Mission: To line our pockets by continuing the eternal spin of the 
         Military-Industrial complex wheel, through copious lobbying
         and warmongering in the press. The exploitation of third world workers
         is just a perk of the job for us bloodsucking leeches!
       </h2>
     </section>
     <section id='products'>
+      <h2>Products</h2>
       <div class='productBox'>
         <img class='productImg' src='media/gimble.jpg' alt='A cool gimble in a college apartment'>
         <h4>The Gimble</h4>
@@ -67,6 +69,7 @@
       </div>
     </section>
     <section id='employees'>
+      <h2>Employees</h2>
       <div class='employeeBox'>
         <img class='employeeImg' src='media/ian.jpg' alt='A dweeb in a cape and beret drinking tea'>
         <h4>Ian 'Bazooka' Ring</h4>
