--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
           <p>Nowadays nearly everything spies on you, so we here at the Conglomerate thought:
             "Hell, why not our toasters too?". Our BioAdvanced© KillBot© Toaster is garunteed
             to report your activities to the government, as well as any interested and paying 
-            dystopic corporation. And as a special bonus, it can transform into a deadly, remote
-            operated death machine, trained in CIA Torture and Coup tactics. It's 'More than meets the Eye!'
-            Also toasts a mean rye.    
+            dystopic corporation.   
           </p>
         </div>
         <div class='productBox'>
@@ -89,17 +87,12 @@
         <div class='employeeBox'>
           <img class='employeeImg' src='media/crispy.jpg' alt='A giga Chad'>
           <h4>Christopher 'Crispy' Hanely</h4>
-          <p>Bonafide Summoner on the Rift, can articulatly and amusingly harangue 
-            on the lack of design merit in League of Legends. Will call Shaco support players
-            virgins, and will say the Gamer Word at the slightest provocation. 
-          </p>
+          <p>Will call Shaco supports virgins</p>
         </div>
         <div class='employeeBox'>
           <img class='employeeImg' src='media/antGod.png' alt='Spindly young man in a Safewine wine aisle, holding a jug of white, hands making a rad symbol, captioned: Spring Break'>
           <h4>Anthony 'Ant-God' St. John</h4>
-          <p>Alternatively known as 'The Itallian Stallion', the 'Spicy Meatball'
-            Specializes in Deagle Headshots, being an agent of chaos, and snickering.
-          </p>
+          <p>Specializes in Deagle Headshots and snickering.</p>
         </div>
       </div>
     </section>
